# raytracer

./: .gitignore  Cargo.toml  POSSIBLE_OPTIMISATIONS.md  README.md  TODO.md  perf  ray_plane_intersection_derivation.md  ray_sphere_intersection_derivation.latex  ray_sphere_intersection_derivation.md  scene
benches/: raytracer.rs
scenes/: breakfast-room
src/: aabb.rs  bvh.rs  config.rs  convert.rs  cpu_affinity.rs  indices.rs  lib.rs  main.rs  material.rs  mmap.rs  obj.rs  rng.rs  shapes.rs  transform.rs  vec3.rs
